--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,6 +34,7 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
+  --color-gray-background: #f8fafd;
 }
 
 @media (prefers-color-scheme: dark) {
